--- a/BotCore/BotCore.csproj
+++ b/BotCore/BotCore.csproj
@@ -7,6 +7,7 @@
 
   <ItemGroup>
     <PackageReference Include="Discord.Net" Version="2.1.1" />
+    <PackageReference Include="HtmlAgilityPack" Version="1.11.8" />
     <PackageReference Include="Unity" Version="5.11.1" />
   </ItemGroup>
 
